[package]
name = "krusti"
version = "0.1.0"
authors = ["Robert Glyde <robert.glyde@sky.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avro-rs = "0.6.5"
schema_registry_converter = "1.1.0"
structopt = "0.3.2"
clap = { version = "2.33", default-features = false }
openssl = { version = "0.10.25", features = ["vendored"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
