[package]
name = "krusti"
version = "0.1.0"
authors = ["Robert Glyde <robert.glyde@sky.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "~0.23", features = ["cmake-build"] }
futures = "0.3.4"
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.3.4"
avro-rs = "0.7.0"
schema_registry_converter = "1.1.0"
structopt = "0.3.9"
clap = { version = "2.33", default-features = false }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
