[package]
name = "krusti"
version = "0.1.0"
authors = ["Robert Glyde <robert.glyde@sky.uk>"]
edition = "2018"

[dependencies]
rdkafka = { version = "~0.23", features = ["cmake-build"] }
# avro-rs = "0.7.0"
avro-rs = { git = "https://github.com/GregBowyer/avro-rs", branch = "recursive-types" }
byteorder = ">= 1.0"
curl = ">= 0.4"
failure = ">= 0.1.6"
url = ">= 2.1.1"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.9"
clap = { version = "2.33", default-features = false }
regex = "1.3.4"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
